--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+     <h1> REsponsive Image by Grid</h1>
      <div class="container">
         <img src="/Image/1.jpg" alt="">
         <img src="/Image/10.jpg" alt="">
